<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/nav_graph"
  app:startDestination="@id/navigation_main"
  >
  <fragment
    android:id="@+id/navigation_main"
    android:name="net.chigita.savepoint.ui.fragment.HomeFragment"
    android:label="@string/label_home"
    tools:layout="@layout/fragment_home"
    >
    <action
      android:id="@+id/action_main_to_register"
      app:destination="@+id/navigation_register"
      />
    <action
      android:id="@+id/action_main_to_set_up_angle"
      app:destination="@id/navigation_angle_set_up"
      />

  </fragment>
  <fragment
    android:id="@+id/navigation_register"
    android:name="net.chigita.savepoint.ui.fragment.RegisterFragment"
    android:label="@string/label_register"
    tools:layout="@layout/fragment_register"
    >
    <action
      android:id="@+id/action_register_to_angle_register"
      app:destination="@+id/navigation_angle_register"
      />
    <argument
      android:name="uuid"
      android:defaultValue="@null"
      app:argType="string"
      app:nullable="true"
      />
  </fragment>
  <fragment
    android:id="@+id/navigation_angle_register"
    android:name="net.chigita.savepoint.ui.fragment.AngleRegisterFragment"
    android:label="@string/label_angle_register"
    tools:layout="@layout/fragment_angle_register"
    >
    <action
      android:id="@+id/action_angle_register_to_register"
      app:destination="@id/navigation_register"
      />
    <argument
      android:name="thing_uuid"
      android:defaultValue=" "
      app:argType="string"
      app:nullable="false"
      />
  </fragment>
  <fragment
    android:id="@+id/navigation_angle_set_up"
    android:name="net.chigita.savepoint.ui.fragment.AngleSetUpFragment"
    android:label="@string/label_angle_set_up"
    tools:layout="@layout/fragment_set_up_angle"
    >
    <action
      android:id="@+id/action_angle_set_up_to_home"
      app:destination="@id/navigation_main"
      />
    <argument
      android:name="thing_uuid"
      android:defaultValue=" "
      app:argType="string"
      app:nullable="false"
      />
  </fragment>

</navigation>