<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  >
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
      android:id="@+id/label_x"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:text="@string/x_axis"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
    <TextView
      android:id="@+id/current_x"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dash"
      android:textSize="80sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/x_bar"
      app:layout_constraintBottom_toBottomOf="@id/x_bar"
      app:layout_constraintEnd_toStartOf="@id/x_bar"
      />
    <TextView
      android:id="@+id/x_bar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="80sp"
      android:text="@string/slash"
      app:layout_constraintTop_toBottomOf="@id/label_x"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />
    <TextView
      android:id="@+id/target_x"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="80sp"
      app:layout_constraintTop_toTopOf="@id/x_bar"
      app:layout_constraintBottom_toBottomOf="@id/x_bar"
      app:layout_constraintStart_toEndOf="@id/x_bar"
      app:layout_constraintEnd_toEndOf="parent"
      />

    <TextView
      android:id="@+id/label_y"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:text="@string/y_axis"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/x_bar"
      />
    <TextView
      android:id="@+id/current_y"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dash"
      android:textSize="80sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/y_bar"
      app:layout_constraintBottom_toBottomOf="@id/y_bar"
      app:layout_constraintEnd_toStartOf="@id/y_bar"
      />
    <TextView
      android:id="@+id/y_bar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="80sp"
      android:text="@string/slash"
      app:layout_constraintTop_toBottomOf="@id/label_y"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />
    <TextView
      android:id="@+id/target_y"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="80sp"
      app:layout_constraintTop_toTopOf="@id/y_bar"
      app:layout_constraintBottom_toBottomOf="@id/y_bar"
      app:layout_constraintStart_toEndOf="@id/y_bar"
      app:layout_constraintEnd_toEndOf="parent"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>