<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  >
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    >
    <TextView
      android:id="@+id/angle_label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="8dp"
      android:text="@string/angle_name_edit_text"
      android:textSize="20sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/thing_edit_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      android:hint="@string/angle_name_hint_text"
      android:lines="1"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/angle_label"
      app:theme="@style/EditTextStyle"
      />

    <TextView
      android:id="@+id/angle_description_label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="8dp"
      android:text="@string/description"
      android:textSize="20sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/thing_edit_text"
      />
    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/angle_description_edit_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      android:hint="@string/angle_name_hint_text"
      android:lines="10"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/angle_description_label"
      app:theme="@style/EditTextStyle"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>